# reversi_python

./: compare_algorithms.py  play.py  pyproject.toml  train.py
my_ml/: dataset_reader.py  model.py
my_ml/networks/: __init__.py  network.py
my_ml/networks/modules/: convolution_and_linear.py  deconvolution.py  mlp.py  utils.py
my_ml/training/: __init__.py  early_stopper.py  learning_rate_scheduler.py  optimizers.py  trainer.py
my_ml/training/callbacks/: __init__.py  callbacks.py  serialization_callbacks.py
my_ml/training/metrics/: __init__.py  average.py  boolean_accuracy.py  categorical_accuracy.py  metric.py
my_ml/utils/: utils.py
registrable/: __init__.py  from_params.py  registrable.py
reversi/: game_engine.py
reversi/board/: __init__.py  board.py  color.py  exceptions.py  position.py
reversi/board/bit_board/: __init__.py  board.py
reversi/board/list_board/: __init__.py  board.py
reversi/game_interface/: __init__.py  cui.py  game_interface.py  gui_tklinter.py
reversi/ml/: dataset_reader.py
reversi/ml/board_feature_extractors/: __init__.py  board_feature_extractor.py  cnn_feature_extractor.py
reversi/player_configs/: min_max_0.01.json  min_max_0.01_yaocho.json  min_max_0.1.json  min_max_3.json  min_max_3_yaocho.json  min_max_fast.json  ml.json  monte_carlo_fast.json
reversi/players/: human_player.py  player.py  random_player.py
search_algorithm/: min_max_search.py  monte_carlo_search.py  search_algorithm.py  time_limit.py  tree_node.py
tests/reversi/: test_board.py
tests/search/: test_min_max_search.py
(+14 files in other folders)
